src/syntax/tests/data/negative/conditionals-2.hsh
if true and true then
	# empty
elseif true and true
	# empty
end
